.metadata/.plugins/org.eclipse.cdt.ui/RegDFA.build.log
21:53:05 **** Incremental Build of configuration Debug for project RegDFA ****
make all 
Building file: ../src/RegDFA.cpp
Invoking: GCC C++ Compiler
g++ -I"/Users/Deverick/Documents/workspace/RegDFA/src" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/RegDFA.d" -MT"src/RegDFA.d" -o "src/RegDFA.o" "../src/RegDFA.cpp"
../src/RegDFA.cpp:45:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/RegDFA.cpp:60:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for(char& c : Postfix) {
                    ^
../src/RegDFA.cpp:70:11: error: expected expression
                                   template<class std::pair>
                                   ^
../src/RegDFA.cpp:73:30: error: use of undeclared identifier 'newPair'
                                    stateHistory.push(newPair);
                                                      ^
../src/RegDFA.cpp:105:19: error: cannot initialize a variable of type 'Vertex *' with an rvalue of type 'value_type *' (aka 'std::__1::pair<Vertex, Vertex> *')
                                   Vertex* nodeA =  &stateHistory.top();
                                           ^        ~~~~~~~~~~~~~~~~~~~
../src/RegDFA.cpp:108:22: error: cannot initialize a variable of type 'Vertex *' with an rvalue of type 'value_type *' (aka 'std::__1::pair<Vertex, Vertex> *')
                                   Vertex* nodeB = &stateHistory.top();
                                           ^       ~~~~~~~~~~~~~~~~~~~
../src/RegDFA.cpp:144:32: error: no viable conversion from 'Vertex' to 'const value_type' (aka 'const std::__1::pair<Vertex, Vertex>')
                               stateHistory.push(*rootNode2);
                                                 ^~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:248:30: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'Vertex' to 'const std::__1::pair<Vertex, Vertex> &' for 1st argument
struct _LIBCPP_TYPE_VIS_ONLY pair
                             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:267:9: note: candidate template ignored: could not match 'pair<type-parameter-0-0, type-parameter-0-1>' against 'Vertex'
        pair(const pair<_U1, _U2>& __p
        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/stack:194:33: note: passing argument to parameter '__v' here
    void push(const value_type& __v) {c.push_back(__v);}
                                ^
../src/RegDFA.cpp:153:19: error: cannot initialize a variable of type 'Vertex *' with an rvalue of type 'value_type *' (aka 'std::__1::pair<Vertex, Vertex> *')
                                   Vertex* nodeA =  &stateHistory.top();
                                           ^        ~~~~~~~~~~~~~~~~~~~
../src/RegDFA.cpp:156:22: error: cannot initialize a variable of type 'Vertex *' with an rvalue of type 'value_type *' (aka 'std::__1::pair<Vertex, Vertex> *')
                                   Vertex* nodeB = &stateHistory.top();
                                           ^       ~~~~~~~~~~~~~~~~~~~
../src/RegDFA.cpp:191:15: warning: unused variable 'lengthOF' [-Wunused-variable]
                        int lengthOF = postfix.size();
                            ^
In file included from ../src/RegDFA.cpp:8:
In file included from /Users/Deverick/Documents/workspace/RegDFA/src/InfixToPostfix.h:10:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:439:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:626:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:273:15: error: no matching constructor for initialization of 'Vertex'
            : first(__p.first), second(__p.second) {}
              ^     ~~~~~~~~~
../src/RegDFA.cpp:88:46: note: in instantiation of function template specialization 'std::__1::pair<Vertex, Vertex>::pair<Vertex *, Vertex *>' requested here
                                   std::pair<Vertex,Vertex> newPair = std::make_pair(rootNode1,endNode1);
                                                                      ^
/Users/Deverick/Documents/workspace/RegDFA/src/Vertex.h:48:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'Vertex *const' to 'const Vertex' for 1st argument; dereference the argument with *
class Vertex{
      ^
/Users/Deverick/Documents/workspace/RegDFA/src/Vertex.h:53:2: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        Vertex();
        ^
In file included from ../src/RegDFA.cpp:8:
In file included from /Users/Deverick/Documents/workspace/RegDFA/src/InfixToPostfix.h:10:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:439:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/algorithm:626:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:273:33: error: no matching constructor for initialization of 'Vertex'
            : first(__p.first), second(__p.second) {}
                                ^      ~~~~~~~~~~
/Users/Deverick/Documents/workspace/RegDFA/src/Vertex.h:48:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'Vertex *const' to 'const Vertex' for 1st argument; dereference the argument with *
class Vertex{
      ^
/Users/Deverick/Documents/workspace/RegDFA/src/Vertex.h:53:2: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        Vertex();
        ^
3 warnings and 9 errors generated.
make: *** [src/RegDFA.o] Error 1

21:53:06 Build Finished (took 515ms)

